Add proper namespace and optional field support